# efz_streaming

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
include/: constants.h  game_data.h  http_server.h  logger.h  memory_reader.h  overlay_data.h
portraits/: README.txt
src/: dllmain.cpp  game_data.cpp  http_server.cpp  logger.cpp  memory_reader.cpp  overlay_data.cpp
